<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainViewRLID"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.activities.user.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:src="@drawable/crmappicon"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/welcome_back"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/sign_in_to_to_continue"
                    android:textColor="@color/edit_7"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailETID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_mobile_number"
                            android:inputType="text"
                            android:fontFamily="@font/roboto_medium"
                            android:textColor="@color/black"
                            android:textColorHint="@color/edit_7"
                            android:textSize="@dimen/_12ssp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordETID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:fontFamily="@font/roboto_medium"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textColorHint="@color/edit_7"
                            android:textSize="@dimen/_12ssp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/forgotTVID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/forgot_password"
                        android:textColor="@color/edit_7"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/loginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_42sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:background="@drawable/bg_login_btn"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/signUpLLID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/new_user"
                            android:textColor="@color/edit_7"
                            android:textSize="@dimen/_12ssp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/sign_up"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />

                    </LinearLayout>




                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/cpLoginLLID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/roboto_medium"
            android:text="Agent Login ? "
            android:textColor="@color/edit_7"
            android:textSize="@dimen/_12ssp"
            tools:ignore="HardcodedText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/_2sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="Click here"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

    </LinearLayout>


</RelativeLayout>