<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainViewLLID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical"
    tools:context=".ui.activities.checklist.CustomerDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/header"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Personal Info-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:orientation="vertical"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/fatherNameETID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_edit_box"
                            android:fontFamily="@font/roboto_medium"
                            android:hint="@string/father_name"
                            android:padding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/edit_7"
                            android:textSize="@dimen/_12ssp" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/nomineeNameETID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/bg_edit_box"
                            android:fontFamily="@font/roboto_medium"
                            android:hint="@string/nominee_s_name"
                            android:padding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/edit_7"
                            android:textSize="@dimen/_12ssp" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/spouseNameETID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/bg_edit_box"
                            android:fontFamily="@font/roboto_medium"
                            android:hint="@string/spouse_name"
                            android:padding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/edit_7"
                            android:textSize="@dimen/_12ssp" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/alternativeNumberETID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/bg_edit_box"
                            android:fontFamily="@font/roboto_medium"
                            android:hint="@string/alternative_contact_number"
                            android:inputType="number"
                            android:padding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/edit_7"
                            android:textSize="@dimen/_12ssp" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/relationshipETID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/bg_edit_box"
                            android:fontFamily="@font/roboto_medium"
                            android:hint="@string/relationship_with_applicant"
                            android:padding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/edit_7"
                            android:textSize="@dimen/_12ssp" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/addressETID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/bg_edit_box"
                            android:fontFamily="@font/roboto_medium"
                            android:hint="@string/address_for_communication"
                            android:padding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/edit_7"
                            android:textSize="@dimen/_12ssp" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/permanentAddressETID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/bg_edit_box"
                            android:fontFamily="@font/roboto_medium"
                            android:hint="@string/permanent_address"
                            android:padding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/edit_7"
                            android:textSize="@dimen/_12ssp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/contactNumberETID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/bg_edit_box"
                            android:fontFamily="@font/roboto_medium"
                            android:hint="@string/contact_number"
                            android:inputType="number"
                            android:padding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/edit_7"
                            android:textSize="@dimen/_12ssp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/emailIdETID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/bg_edit_box"
                            android:fontFamily="@font/roboto_medium"
                            android:hint="@string/email_id"
                            android:padding="@dimen/_12sdp"
                            android:visibility="gone"
                            android:textColor="@color/black"
                            android:textColorHint="@color/edit_7"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/nextRLID"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:background="@drawable/bg_login_btn"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/roboto_medium"
                        tools:ignore="RelativeOverlap"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_13sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_right_arrow"
                        android:backgroundTint="@color/white"
                        android:layout_marginEnd="@dimen/_15sdp"
                        tools:ignore="UnusedAttribute"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</LinearLayout>