<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customAlert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingEnd="1dp"
    android:paddingStart="8dp"
    android:paddingTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_bg"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/alertTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/discTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/edit_7" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <Button
                android:id="@+id/alertYesBtn"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_regular"
                android:gravity="end|center_vertical"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:text="@string/yes"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/alertNoBtn"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_regular"
                android:gravity="end|center_vertical"
                android:paddingEnd="12dp"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/no"
                android:textColor="@color/colorPrimaryDark" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>