<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@color/colorPrimary"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6">

                <RelativeLayout
                    android:id="@+id/backRLID"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_circle_ripple">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/ic_backarrow_2"
                        android:contentDescription="@string/app_name"
                        tools:ignore="UnusedAttribute" />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="3.4"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp">

                <EditText
                    android:id="@+id/searchETID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/search_here"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="Autofill" />

            </LinearLayout>



        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/pbSearch"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateDrawable="@drawable/progress"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRCID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/noDataTVID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/no_results_found"
        android:textColor="@color/crmtextblack"
        android:textSize="@dimen/_15ssp" />

</LinearLayout>
